@@ -209,6 +209,7 @@ struct omxState {													// The Current State of Optimization
 	void omxStateNextRow(omxState *state);								// Advance Row
 	void omxStateNextEvaluation(omxState *state);						// Advance Evaluation count
 
+	void omxWriteCheckpointMessage(omxState *os, char *msg);
 	void omxSaveCheckpoint(omxState* os, double* x, double* f, int force);	// Save out checkpoints
 
 #endif /* _OMXSTATE_H_ */
